--- a/src/main/config/log4j.prod.properties
+++ b/src/main/config/log4j.prod.properties
@@ -4,13 +4,17 @@
 log4j.rootLogger=DEBUG, CONSOLE, ROLLINGFILE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=WARN
+# log4j.appender.CONSOLE.Threshold=WARN
+# Revert back to WARN after investigation completes.
+log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.Target=System.err
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} [%t] (%C:%L) %-5p %m%n
 
 log4j.appender.ROLLINGFILE=org.apache.log4j.RollingFileAppender
-log4j.appender.ROLLINGFILE.Threshold=INFO
+# log4j.appender.ROLLINGFILE.Threshold=INFO
+# Revert back to INFO after investigation completes.
+log4j.appender.ROLLINGFILE.Threshold=DEBUG
 log4j.appender.ROLLINGFILE.File=/mnt/secor_data/logs/secor-${secor_group}.log
 # keep log files up to 1G
 log4j.appender.ROLLINGFILE.MaxFileSize=20MB
