--- a/src/main/config/log4j.heroku.properties
+++ b/src/main/config/log4j.heroku.properties
@@ -6,7 +6,9 @@
 log4j.rootLogger=DEBUG, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=INFO
+# log4j.appender.CONSOLE.Threshold=INFO
+# Revert to INFO when investigation concludes.
+log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} [%t] (%C:%L) %-5p %m%n
